fixed spacing issue and some navbar functinality

--- a/main.css
+++ b/main.css
@@ -2,8 +2,9 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    /* If I take out width 100% I get horizontal scrolling on iPhone SE*/
+    /* width:100%; */
   }
-  
   
 body {
     /* font-family: "Open Sans",    sans-serif;  */
@@ -17,14 +18,13 @@ body {
     margin: 0;
 }
 
-header {
-    padding: 12% 0;
-}
-
 a {
     text-decoration: none;
-    text-align: center;   
 } 
+
+header{
+    padding: 12% 0;
+}
 
 /* Nav bar items */
 nav, footer {
@@ -39,51 +39,47 @@ nav, footer {
     border: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 10px;
     position: fixed;
-    width: 100%;
-    
-  }
+    width: 100%;  
+}
   
-  .main-nav {
+.main-nav {
     list-style-type: none;
     display: none;
-  }
+}
   
-  .nav-links, .logo {
+.nav-links, .logo {
     text-decoration: none;
     color: rgba(255, 255, 255, 0.7);
-  }
+}
   
-  .main-nav li {
+.main-nav li {
     text-align: center;
     margin: 15px auto;
-  }
-  
-  .logo {
-    display: inline-block;
-    float:left;
+}
+/* Something is wrong with how I am positioning the logo*/
+.logo {
+    float: left;
     font-size: 22px;
     margin-top: 10px;
     margin-left: 20px;
-  }
+}
   
-  .navbar-toggle {
+.navbar-toggle {
     position: absolute;
     top: 10px;
     right: 20px;
     cursor: pointer;
     color: rgba(255, 255, 255, 0.8);
     font-size: 24px;
-  }
-  
-  .active {
-    display: block;
-  }
+    padding-right: 20px;
+}
 
 /* Sections - Styles */
 section {
-    min-height: 400px;
-    padding: 0;
+    min-height: 200px;
+    padding: 6% 0;
     background-color: #bbb;
+    border: 1px solid red;
 }
   
 header {
@@ -103,17 +99,12 @@ section:nth-child(even) {
     background-color: #ddd;
 }
 
-
 .about-section, .project-section, .hobby-section, .contact-section {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 150px 20px;
-}
-
-.profile-pic {
-    padding-right: 40px;
+    padding: 100px 20px;
 }
 
 .projects-container {
@@ -154,9 +145,8 @@ section:nth-child(even) {
 }
 
 /* Hobby section (life outside) */
-.fun-pic {
-    /* border: 1px solid black; */
-    margin-right: 1 em 1.2em;
+.fun-pic, .profile-pic {
+    margin-top: 20px;
 }
 
 /* Form section */
@@ -170,17 +160,7 @@ section:nth-child(even) {
 }
 
 .contact-form {
-  width: 100%;
-}
-
-fieldset{
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-label {
-    float: left;
-    text-align: right;
+  width: 95%;
 }
 
 .submit input{
@@ -200,26 +180,43 @@ input{
 }
 
 fieldset{
+    padding: 1em;
     margin: 0 auto;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 legend{
     color: #fff;
     background:  #111;
     border: 1px solid black;
-    padding: 2px 6px
+    padding: 2px 6px;
+    /* padding: 0.2em 0.5em; */
+    /* text-align:center; */
+    margin: 0 auto;
 }
+  
+label {
+    float:left;
+    width:25%;
+    margin-right:0.5em;
+    padding-top:0.2em;
+    text-align:right;
+    font-weight:bold;
+}
+
 
 
 /* Footer links */
 a > .fa{
     font-size: 30px;
     text-decoration: none;  
-    padding: .2em 1.5em;  
+    padding: 10px 25px;  
     color: black;
 }
 
 @media screen and (min-width: 768px) {
+    /* Navbar */
     .navbar {
         display: flex;
         justify-content: space-between;
@@ -256,7 +253,7 @@ a > .fa{
         color: rgba(255, 255, 255, 1);
     }
 
-    /* add my own */
+    /* add to other sections */
     header {
         padding: 200px 100px;
     }
